bld/wipfc/test/pos/pos2.ipf
:userdoc.
:title.Positive 2
:docprof.
:h1 res=1.Heading 1
:i1 id='1'.Heading 1
:p.Text inside of a paragraph, with punctuation and an entity reference&per.
:euserdoc.


