bld/wipfc/test/neg/neg4.ipf
:userdoc.
:title.Negative 4
:docprof.
:h1.Bad entity reference
:p.This sentence ends in a bad entity reference&por.
:euserdoc.


